WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256903
[JSC] /\p{Number}--]/v; should be a syntax error
https://bugs.webkit.org/show_bug.cgi?id=256903
Summary
[JSC] /\p{Number}--]/v; should be a syntax error
Michael Saboff
Reported
2023-05-17 10:04:24 PDT
this regular expression should throw a syntax error: /[\p{Number}--]/v Steps To Reproduce: jsc -e "/[\\p{Number}--]/v;" Results: JavaScriptCore accepts it. V8 says: unnamed:1: SyntaxError: Invalid regular expression: /[\p{Number}--]/v: Invalid character in character class /[\p{Number}--]/v; ^^^^^^^^^^^^^^^^^ SyntaxError: Invalid regular expression: /[\p{Number}--]/v: Invalid character in character class
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2023-05-17 10:04:35 PDT
<
rdar://109400589
>
Michael Saboff
Comment 2
2023-05-17 10:48:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13971
EWS
Comment 3
2023-05-17 13:53:06 PDT
Committed
264175@main
(84d5c4d59cd7): <
https://commits.webkit.org/264175@main
> Reviewed commits have been landed. Closing PR #13971 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug