[JSC] /\p{Number}--]/v; should be a syntax error https://bugs.webkit.org/show_bug.cgi?id=256903 rdar://109400589

Reviewed by Yusuke Suzuki.

Added a new AfterSetOperator state to ClassSetParserDelegate to signify when an explicit set
operation was parsed.  Then made it an error if the ClassSetParserDelegate ends in that
dangling operator without a RH operand state.

Added several new test cases.
Also changed two syntax error test cases looking for "unmatched ] or } bracket for Unicode pattern"
as this change detects the dangling operator error before the unmatched ']' error.
Added two new test cases to catch the "unmatched ]" syntax error that those prior tests were
looking for.

* JSTests/stress/regexp-vflag-property-of-strings.js:
* Source/JavaScriptCore/yarr/YarrParser.h:
(JSC::Yarr::Parser::ClassSetParserDelegate::setSubtractOp):
(JSC::Yarr::Parser::ClassSetParserDelegate::setIntersectionOp):
(JSC::Yarr::Parser::ClassSetParserDelegate::canTakeSetOperand):
(JSC::Yarr::Parser::ClassSetParserDelegate::atomPatternCharacter):
(JSC::Yarr::Parser::ClassSetParserDelegate::atomBuiltInCharacterClass):
(JSC::Yarr::Parser::ClassSetParserDelegate::end):

Canonical link: https://commits.webkit.org/264175@main